[package]
name = "furbooru"
version = "0.4.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
license-file = "LICENSE"
description = "An async Furbooru/Derpibooru client for Rust"
homepage = "https://github.com/Xe/furbooru"
repository = "https://github.com/Xe/furbooru"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
http = "0.2"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.15", features = ["native-tls"] }
url = "2"

[dev-dependencies]
httptest = "0"
log = "0"
pretty_env_logger = "0"
